# AppleEase

./: .gitignore  README.md  justfile  pyproject.toml
src/appleease/: cli.py  main.py  utils.py
